--- a/style.css
+++ b/style.css
@@ -1,4 +1,155 @@
-/* TEXT STYLING */
+
+/* NAVIGATION */
+.logo {
+  font-family: 'Roboto', 'open sans', san serif;
+  font-size: 28px;
+}
+
+main {
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1 {
+  text-align: center;
+}
+
+input#toggle {
+  display: none;
+}
+
+.header, 
+.main-navigation ul {
+  display: flex;
+  flex-direction: column;
+flex-wrap: nowrap; 
+}
+
+.header-wrapper {
+  padding: 2em;
+  background: transparent;
+}
+
+.header {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.logo {
+  margin-bottom: 1em;
+  align-self: center;
+  color: white;
+  font-weight: 600;
+  font-size: 1em !important;
+  text-transform: uppercase !important;
+}
+
+ ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    justify-content: space-between;
+    border-bottom: none;
+}
+
+  
+  
+ul a {
+    padding: .7em;
+    text-align: center;
+    color: white;
+    font-size: 1.2em;
+    font-weight: 400;
+    font-family: 'Courier New', Courier, monospace;
+    transition: background-color .3s, color .3s;
+}
+
+ul a:hover {
+      color: seagreen; 
+    }
+  
+
+.w-md-50 img {
+  object-fit: cover;
+  height: 400px;
+}
+.site-content {
+  min-height: 600px;
+  background: burlywood;}
+
+
+#main-navigation label {
+    display: block;
+  }
+
+#main-navigation input {
+    display: noneblock;
+  }
+ 
+#main-navigation label img {
+    width: 20%;
+  }
+
+#main-navigation label {
+    display: block;
+    cursor: pointer;
+    float: right;
+    cursor: pointer;
+    float: left;
+    margin-top: -90px;
+    }
+
+#main-navigation {
+      display: block;
+    }
+    
+ul {
+      display: none;
+      margin-top: 76px;
+      transition: 800ms;
+    }
+
+#main-navigation a {
+      display: block;
+      padding: 3px;
+      font-size: 14.5px;
+      text-align: center;
+      clear: right;
+    }
+    input[type=checkbox]:checked~ul {
+    display: block;
+  }
+
+
+  @media (min-width: 768px) {
+    #main-navigation label {
+      display: none;
+    }
+    ul {
+      display: flex;
+      margin-top: 76px;
+      transition: 800ms;
+      float: right;
+      margin-top: -3px;
+    }
+
+    li {
+      padding-right: 20px;
+    }
+
+    .logo {
+      float: left;
+      margin-top: -20px;
+      margin-bottom: -20px;
+    }
+  }
+
+  /* TEXT STYLING */
 text {
     font-family: sans-serif;
     font-size: 10px;
@@ -15,6 +166,7 @@ text {
   body{
     background-color:black;
     color: white;
+    font-family: 'Courier New', Courier, monospace,
     
 
     }
